--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <img src="assets/story-4.png" alt="">
                     <div class="item-description">
                         <h5>Classroom management
-                            techniques for new tutors</h5>
+                            techniques</h5>
                             <div class="popup-bar2">November 19, 2024</div>
                     </div>
                 </div>
