--- a/index.html
+++ b/index.html
@@ -139,7 +139,31 @@
           </section>
     </main>
     <footer>
-
+        <section class="footer-container">
+            <div class="box">
+                <div class="footer-logo">
+                    <img src="assets/logo.png" alt="">
+                    <h3>Kid <br> Education</h3>
+                </div>
+                <p>Kids' education encompasses all the learning experiences that help young people develop their knowledge, skills, and character.</p>
+            </div>
+            <div class="box">
+                <h4>About School</h4>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Facilities</a></li>
+                    <li><a href="">Admission</a></li>
+                </ul>
+            </div>
+            <div class="box">
+                <h4>Keep in touch</h4>
+                <img src="assets/fb.png" alt="">
+                <img src="assets/google+.png" alt="">
+                <img src="assets/dribble.png" alt="">
+                <img src="assets/twitter.png" alt="">
+            </div>
+        </section>
     </footer>
 </body>
 </html>
