Explore Marquee Tag

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body class="quicksand">
     <header>
+        <marquee>
+            <h3>This only for educational purpose!</h3>
+       </marquee>
         <section class="header-section">
             <div class="logo-section">
                 <img src="assets/logo.png" alt="">
@@ -59,25 +62,19 @@
                 <div class="card card1">
                     <img src="assets/kinder.png" alt="">
                     <h4>Kinder (3-6) Years</h4>
-                    <p>Cum sociis natoque penatibus et magnis
-                        dis parturient montes, nascetur ridiculus
-                        mu sdis parturient</p>
+                    <p>It includes formal schooling from preschool to high schoolIt includes formal schooling from preschool to high school</p>
                         <a href="">Read More</a>
                 </div>
                 <div class="card card2">
                     <img src="assets/elementary.png" alt="">
                     <h4>Elementary School</h4>
-                    <p>Cum sociis natoque penatibus et magnis
-                        dis parturient montes, nascetur ridiculus
-                        mu sdis parturient</p>
+                    <p>It includes formal schooling from preschool to high schoolIt includes formal schooling from preschool to high school</p>
                         <a href="">Read More</a>
                 </div>
                 <div class="card card3">
                     <img src="assets/middle.png" alt="">
                     <h4>Middle (10-16) Years</h4>
-                    <p>Cum sociis natoque penatibus et magnis
-                        dis parturient montes, nascetur ridiculus
-                        mu sdis parturient</p>
+                    <p>It includes formal schooling from preschool to high schoolIt includes formal schooling from preschool to high school</p>
                         <a href="">Read More</a>
                 </div>
             </div>
